# aragsys

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Claude_Code_Context_Guide.md  README.md  design-documentation.md  main.py  myCLAUDE.md  pyproject.toml  tree.md
.claude/: CLAUDE.md  llm-context.md  settings.local.json
backend/: __init__.py  db.py  main.py
config/: entities.yaml  generation.yaml  graphrag.yaml  models.yaml  neo4j.yaml  pipelines.yaml  precision.yaml  techniques.yaml
docs/: USER_GUIDE.md
nodes/: technique_node.py
ollama/: client.py
pipeline/: builder.py
registry/: technique_registry.py
stores/: __init__.py  neo4j_store.py
techniques/: __init__.py  compress.py  generate_context.py  generate_cot.py  generate_simple.py  graph_entity.py  graph_expand.py  graph_multihop.py  hybrid.py  hyde.py  multi_query.py  naive_rag.py  rerank.py
tests/: test_answer.py  test_builder.py  test_compress_technique.py  test_config_loader.py  test_entity_extractor.py  test_generate_context_technique.py  test_generate_cot_technique.py  test_generate_simple_technique.py  test_generation_config.py  test_graph_entity_technique.py  test_graph_expand_technique.py  test_graph_multihop_technique.py  test_graphrag_config.py  test_hybrid_technique.py  test_hyde_technique.py  test_integration.py  test_markdown_chunker.py  test_multi_query_technique.py  test_naive_rag_technique.py  test_neo4j_store.py  test_nodes.py  test_ollama.py  test_pdf_chunker.py  test_registry.py  test_rerank_technique.py  test_text_chunker.py  test_vector_store.py
utils/: answer.py  (+7 more)
(+50 files in other folders)
