[project]
name = "aragsys"
version = "0.1.0"
description = "Scientific Agentic RAG Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "httpx>=0.28.1",
    "pocketflow>=0.0.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]

[dependency-groups]
test = []
